--- a/Generative/Generative.xcodeproj/xcshareddata/xcschemes/emptyExample Debug.xcscheme
+++ b/Generative/Generative.xcodeproj/xcshareddata/xcschemes/emptyExample Debug.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "E4B69B5A0A3A1756003C02F2"
-               BuildableName = "emptyExample.app"
-               BlueprintName = "GenerativeExample"
-               ReferencedContainer = "container:GenerativeExample.xcodeproj">
+               BuildableName = "GenerativeExample.app"
+               BlueprintName = "Generative"
+               ReferencedContainer = "container:Generative.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "E4B69B5A0A3A1756003C02F2"
-            BuildableName = "emptyExample.app"
-            BlueprintName = "GenerativeExample"
-            ReferencedContainer = "container:GenerativeExample.xcodeproj">
+            BuildableName = "GenerativeExample.app"
+            BlueprintName = "Generative"
+            ReferencedContainer = "container:Generative.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
    </TestAction>
@@ -52,9 +52,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "E4B69B5A0A3A1756003C02F2"
-            BuildableName = "emptyExample.app"
-            BlueprintName = "GenerativeExample"
-            ReferencedContainer = "container:GenerativeExample.xcodeproj">
+            BuildableName = "GenerativeExample.app"
+            BlueprintName = "Generative"
+            ReferencedContainer = "container:Generative.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <AdditionalOptions>
@@ -70,9 +70,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "E4B69B5A0A3A1756003C02F2"
-            BuildableName = "emptyExample.app"
-            BlueprintName = "GenerativeExample"
-            ReferencedContainer = "container:GenerativeExample.xcodeproj">
+            BuildableName = "GenerativeExample.app"
+            BlueprintName = "Generative"
+            ReferencedContainer = "container:Generative.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
